samples/_failures_safe/1761331178_1c2bb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2818a0d.c: In function ‘main’:
./samples/SAFE/__tmp_f2818a0d.c:146:5: error: expected expression at end of input
  146 |     if (len > 0 && input_text[len - 1] == '\n')
      |     ^~
./samples/SAFE/__tmp_f2818a0d.c:146:5: error: expected declaration or statement at end of input
